New docker file for backend

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,8 +4,8 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    buildCommand: npm ci && npm run build
+    startCommand: node dist/server.js
     healthCheckPath: /api/v1/health
     envVars:
       - key: NODE_ENV
@@ -14,11 +14,13 @@ services:
         value: 5000
       - key: MONGODB_URI
         sync: false # Set in Render dashboard
+      - key: MONGODB_DB_NAME
+        value: ViolenceSense
       - key: ML_SERVICE_URL
-        sync: false # Set in Render dashboard
+        sync: false # Set in Render dashboard (e.g., your Hugging Face Space URL)
       - key: DEFAULT_MODEL_PATH
-        value: /models/violence_detection.pth
+        value: ./models/violence_model_legacy.h5
       - key: MODEL_ARCHITECTURE
-        value: videomae
+        value: keras-cnn
       - key: CORS_ORIGIN
         sync: false # Your Vercel frontend URL
