--- a/ml-service/Dockerfile
+++ b/ml-service/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
-    libgl1-mesa-glx \
+    libgl1 \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
@@ -26,23 +26,24 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
-
-# Create necessary directories
-RUN mkdir -p /app/models /app/uploads /app/logs
-
 # Create non-root user for Hugging Face Spaces
 RUN useradd -m -u 1000 user
-USER user
-ENV HOME=/home/user \
-    PATH=/home/user/.local/bin:$PATH
 
+# Set user home as working directory
+ENV HOME=/home/user
 WORKDIR $HOME/app
-COPY --chown=user . $HOME/app
 
-# Expose port (7860 for HF Spaces, 8000 for other platforms)
-EXPOSE 7860 8000
+# Copy application code with correct ownership
+COPY --chown=user:user . $HOME/app
+
+# Create necessary directories
+RUN mkdir -p $HOME/app/uploads $HOME/app/logs
+
+# Switch to non-root user
+USER user
+
+# Expose port (7860 for HF Spaces)
+EXPOSE 7860
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
