--- a/backend/package.json
+++ b/backend/package.json
@@ -33,23 +33,23 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0"
-  },
-  "devDependencies": {
+    "winston": "^3.11.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/form-data": "^2.2.1",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/form-data": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "ts-node-dev": "^2.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
