--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
-  "env": {
-    "NEXT_PUBLIC_API_URL": "@api_url"
-  }
+  "env": {}
 }
