Fix: Update .gitignore to allow backend/src/models folder

--- a/.gitignore
+++ b/.gitignore
@@ -175,8 +175,8 @@ uploads/
 *.mov
 *.mkv
 
-# Model files
-models/
+# Model files (only root models/ folder, not src/models/)
+/models/
 *.pth
 *.pt
 *.onnx
