--- a/backend/.env.production
+++ b/backend/.env.production
@@ -30,8 +30,8 @@ API_VERSION=v1
 API_PREFIX=/api
 
 # CORS Configuration
-# Your Vercel frontend URL
-CORS_ORIGIN=https://your-app.vercel.app
+# Your Vercel frontend URL (can be comma-separated for multiple origins)
+CORS_ORIGIN=https://violence-sense.vercel.app
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
