--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -3,4 +3,4 @@
 # ===========================================
 
 # Backend API URL (Your Render backend URL)
-NEXT_PUBLIC_API_URL=https://your-backend.onrender.com/api/v1
+NEXT_PUBLIC_API_URL=https://violencesense.onrender.com/api/v1
