--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -23,4 +23,4 @@ services:
       - key: MODEL_ARCHITECTURE
         value: keras-cnn
       - key: CORS_ORIGIN
-        sync: false
+        value: https://violence-sense.vercel.app
