--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: MONGODB_URI
         sync: false
       - key: MONGODB_DB_NAME
-        value: ViolenceSense
+        value: violencesense
       - key: ML_SERVICE_URL
         sync: false
       - key: DEFAULT_MODEL_PATH
