--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,4 +1,6 @@
 # API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:5000/api/v1
-# RTSP Service (for video streaming)
-NEXT_PUBLIC_RTSP_SERVICE_URL=http://localhost:8080
+# RTSP Service (for video streaming) - use IPv4 to avoid ::1 connection issues
+NEXT_PUBLIC_RTSP_SERVICE_URL=http://127.0.0.1:8080
+# WebSocket (real-time scores/alerts) - use IPv4 to avoid ::1 connection issues
+NEXT_PUBLIC_WS_URL=ws://127.0.0.1:8080/ws
